--- a/styles.css
+++ b/styles.css
@@ -833,6 +833,14 @@ video {
   min-width: 190px;
 }
 
+.hovered:hover{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-color: #90B8E840;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .card-sm .label {
   transition: all  0.2s linear;
   position: absolute;
@@ -956,7 +964,7 @@ video {
 @media (min-width: 1280px){
   .tabs-sm-screen{
     margin: 0px;
-    overflow: auto;
+    overflow: visible;
     padding: 0px;
   }
 }
